[ATOM-50] Provide an API to query the user-level score