@@ -10,6 +10,7 @@ allprojects {
                                 '--add-opens=java.base/java.util=ALL-UNNAMED',
                                 '--add-opens=java.base/java.text=ALL-UNNAMED',
                                 '--add-opens=java.base/java.net=ALL-UNNAMED',
+                                '--add-opens=java.base/java.io=ALL-UNNAMED',
                                 '--add-opens=java.base/java.security=ALL-UNNAMED',
                                 '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                                 '--add-opens=java.base/java.util.stream=ALL-UNNAMED',
